--- a/Squash.csproj
+++ b/Squash.csproj
@@ -41,6 +41,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Ai.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
@@ -55,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+    <Content Include="TodoLista.txt" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
