--- a/Squash.csproj
+++ b/Squash.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Ai.cs" />
+    <Compile Include="Colision.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
